.kubeconf/ingress/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - nojus.me
    - admin.nojus.me
    secretName: kubernetes-tls
  rules:
    - host: nojus.me
    http:
      paths:
      - backend:
          serviceName: moki2-nuxt
          servicePort: 80
  - host: admin.nojus.me
    http:
      paths:
      - backend:
          serviceName: admin-vue
          servicePort: 80
