.kubeconf/ingress/ingress_no_tsl.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: nojus.me
    http:
      paths:
      - backend:
          serviceName: moki2-nuxt
          servicePort: 80
